Update compile flags

--- a/ldc2.conf
+++ b/ldc2.conf
@@ -8,7 +8,10 @@ default:
         "-L/entry:efi_main",
         "--betterC",
         "--defaultlib=",
-        "--platformlib="
+        "--platformlib=",
+        "-mattr=-mmx,-sse,+soft-float",
+        "-disable-red-zone",
+        "-relocation-model=static"
     ];
     post-switches = [
         "-I%%ldcbinarypath%%/../import",
