Fix: update compiler flags

--- a/ldc2.conf
+++ b/ldc2.conf
@@ -7,11 +7,14 @@ default:
         "-L/subsystem:EFI_APPLICATION",
         "-L/entry:efi_main",
         "--betterC",
+        "--boundscheck=off",
         "--defaultlib=",
+        "--debuglib=",
         "--platformlib=",
         "-mattr=-mmx,-sse,+soft-float",
         "-disable-red-zone",
-        "-relocation-model=static"
+        "-relocation-model=static",
+        "-code-model=large"
     ];
     post-switches = [
         "-I%%ldcbinarypath%%/../import",
