Add bare kernel project

--- a/ldc2.conf
+++ b/ldc2.conf
@@ -1,7 +1,6 @@
-default:
+"x86_64-unknown-windows-msvc":
 {
     switches = [
-        "-mtriple=x86_64-unknown-windows",
         "--linker=lld-link",
         "-L/nodefaultlib",
         "-L/subsystem:EFI_APPLICATION",
@@ -20,4 +19,23 @@ default:
         "-I%%ldcbinarypath%%/../import",
     ];
     lib-dirs=[];
-}
+};
+"x86_64-unknown-unknown-elf-unknown":
+{
+    switches = [
+        "--linker=lld",
+        "--betterC",
+        "--boundscheck=off",
+        "--defaultlib=",
+        "--debuglib=",
+        "--platformlib=",
+        "-mattr=-mmx,-sse,+soft-float",
+        "-disable-red-zone",
+        "-relocation-model=static",
+        "-L--entry=KernelMain"
+    ];
+    post-switches = [
+        "-I%%ldcbinarypath%%/../import",
+    ];
+    lib-dirs=[];
+};
