Building kernel image

--- a/ldc2.conf
+++ b/ldc2.conf
@@ -28,11 +28,19 @@
         "--boundscheck=off",
         "--defaultlib=",
         "--debuglib=",
+        "--nogc",
         "--platformlib=",
         "-mattr=-mmx,-sse,+soft-float",
         "-disable-red-zone",
         "-relocation-model=static",
-        "-L--entry=KernelMain"
+        "-static",
+        "-Xcc=-nostartfiles",
+        "-Xcc=-nostdlib",
+        "-Xcc=-ffunction-sections",
+        "-L--oformat=binary",
+        "-L--Map=build/kernel.map",
+        "-L--entry=KernelMain",
+        "-L-T./kernel/source/kernel.ld"
     ];
     post-switches = [
         "-I%%ldcbinarypath%%/../import",
